@@ -2,16 +2,24 @@
 =  CHANGE LOG   =
 =================
 
-J2SSH Maverick 1.5.2 - Aug 15, 2015
+J2SSH Maverick 1.5.3 - Jan 27, 2016
 
 Features
-	o Added SimpleLogger implementation.
-        o Added Dynamic Port Forwarding.
-	o Prepared pom.xml for maven central via Nexus.
+	o Update examples to use threaded-mode clients to prevent confusion for new users expecting event type behavior from default single threaded mode.
+	o Deprecated CBC and ArcFour ciphers.
 	
 =================
 =  HISTORY      =
 =================
+
+J2SSH Maverick 1.5.2 - Aug 15, 2015
+
+Features
+	o Added SimpleLogger implementation.
+    o Added Dynamic Port Forwarding.
+	o Prepared pom.xml for maven central via Nexus.
+	
+-----------------
 
 J2SSH Maverick 1.5.1 - Jan 2, 2015
 
